--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -126,3 +126,43 @@ nav{
     .productive-user{
         display: flex;
     }
+    /* Challenges */
+    main{
+        max-width: 1140px;
+        max-height: 331px;
+    }
+    .card-container{
+    display: flex;
+    padding: 20px;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+.user{
+    text-align: center;
+    color: black;
+    font-weight: bold;
+    font-size: 42px;
+    font-family: "Raleway", sans-serif;
+}
+.card{
+    width: 300px;
+    border: 2px solid blue;
+    border-radius: 10px;
+    padding: 10px;
+}
+.reviewer{
+    display: felx;
+    flex-wrap: wrap;
+}
+.img-title, .img-date{
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+}
+.reviwer-img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 10px auto;
+}
+    
