--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -130,6 +130,7 @@ nav{
     main{
         max-width: 1140px;
         max-height: 331px;
+        background-color: #F5F8FF;
     }
     .card-container{
     display: flex;
@@ -146,7 +147,7 @@ nav{
 }
 .card{
     width: 300px;
-    border: 2px solid blue;
+    border: 1px solid whitesmoke;
     border-radius: 10px;
     padding: 10px;
 }
@@ -165,4 +166,24 @@ nav{
     border-radius: 50%;
     padding: 10px auto;
 }
-    
+  /* Get in Touch */
+  main{
+        width: 1140px;
+        height: 632px;
+        background-color: #F5F8FF;
+        padding: 0 71px;
+    }
+  .form-title{
+    text-align: center;
+    color: black;
+    font-weight: bold;
+    font-size: 90px;
+    font-family: "Raleway", sans-serif; 
+}
+.get-touch{
+    display: flex;
+}
+.form-label{
+    font-size: 18px;
+    font-family: Inter;
+}
