--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -21,8 +21,7 @@ h3{
 /* .raleway-normal{
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
-  font-style: normal; */
-}    
+  font-style: normal; */   
 #text-primary{
     color: white;
 }
@@ -152,7 +151,7 @@ nav{
     padding: 10px;
 }
 .reviewer{
-    display: felx;
+    display: flex;
     flex-wrap: wrap;
 }
 .img-title, .img-date{
@@ -160,7 +159,7 @@ nav{
     margin: 0 auto;
     align-items: center;
 }
-.reviwer-img{
+.reviewer-img{
     width: 40px;
     height: 40px;
     border-radius: 50%;
