--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -201,7 +201,7 @@ main{
         font-size: 20px;
         border-radius: 10px;
         color: white;
-        margin: 30px auto;
+        margin: 0px 0px;
         padding: 12px 36px;
         display: flex;
     }
@@ -214,9 +214,15 @@ main{
   /* Get in Touch */
   main{
         width: 1140px;
-        /* height: 632px; */
+        height: 632px;
         background-color: #F5F8FF;
         padding: 0 71px;
+    }
+    .footer-column{
+        display: inline-block;
+        margin: 0 auto;
+        padding: 20px;
+        justify-content: space-between;
     }
   .form-title{
     text-align: left;
@@ -227,6 +233,8 @@ main{
 }
 .get-touch{
     display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 form input[type="text"], form input[type="email"], form textarea{
     font-size: 18px;
@@ -245,18 +253,21 @@ form input[type="text"], form input[type="email"], form textarea{
         border-radius: 10px;
         color: white;
         margin: 0px auto;
-        padding: 12px 36px; 
+        padding: 10px 36px; 
     }
-    .form label{
-        font-family: "Raleway", sans-serif; 
+    .footer-column{
+        font-family: "Raleway", sans-serif;
+        justify-content: center;
+        margin: 0 auto; 
     }
 /* Footer Section */
-    main{
+    .get-touch{
     width: 1440px;
     /* height: 428px; */
     background-color: white;
+    margin: 50px;
     }
-.footer-title{
+.form-title{
     text-align: center;
     font-family: "Raleway", sans-serif;
     color: #4E47FF;
