--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -41,6 +41,10 @@ nav{
     margin: 30px auto;
     padding: 12px 36px; 
 }
+.btn-primary:hover{
+    background-color: yellowgreen;
+    cursor: pointer;
+}
 /* Banner Section */
 .banner-content{
     font-family: "Raleway", sans-serif;
@@ -60,6 +64,10 @@ nav{
     color: white;
     margin: 30px auto;
     padding: 12px 36px;
+}
+.btn-secondary:hover{
+    background-color: yellowgreen;
+    cursor: pointer;
 }
     /* Main Section */
     .action-section{
@@ -93,6 +101,10 @@ nav{
         margin: 30px auto;
         padding: 12px 36px;
     }
+    .btn-Third:hover{
+        background-color: yellowgreen;
+        cursor: pointer;
+    }
     .action-img{
         border-radius: 48px;
         padding: 0 17px;
@@ -103,7 +115,7 @@ nav{
         /* height: 306px; */
         border-radius: 20px;
         margin-top: 40px;
-        padding: 20px 40px;
+        padding: 20px 20px 20px 20px;
     }
     /* Productive Section */
     .section-title{
@@ -112,7 +124,10 @@ nav{
         color: black;
         font-family: "Raleway", sans-serif;
         text-align: center;
-        padding: 50px 80px;
+        padding: 30px 80px;
+    }
+    .productive-container{
+        margin: 20px;
     }
     .productive-title{
         font-size: 4em;
@@ -127,8 +142,10 @@ nav{
         gap: 50px;
         padding: 5px;
     }
-    .productive-user{
+    .productive-container{
         display: flex;
+        margin: 20px 0;
+        padding: 0px 20px;
     }
     /* Challenges */
     main{
@@ -212,6 +229,10 @@ main{
         margin: 20px 20px;
         padding: 12px 36px;
         display: flex;
+    }
+    .focus-btn:hover{
+        background-color: yellowgreen;
+        cursor: pointer;
     }
     .focus-img{
         display: inline-block;
